tour details endpoint, swagger documentation
